--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -15,11 +15,11 @@
     </header>
     <main>
         <article>
-<h1>THIS IS TITLE AS H1</h1>
+<h1>THIS IS a sample of a Heading 1</h1>
     <p>THIS IS A PARAGRAPH TO SHOW THAT THE BODY PAGE IS OPERATIONAL</p>
-<h2>THIS AN H2</h2>
+<h2>This is A Heading 2</h2>
     <p>THIS IS A SECOND PARAGRAPH THAT DO THE SAME AS THE FIRST ONE</p>
-<h3>THIS IS THE 3RD TITLE</h3>
+<h3>THIS IS THE 3RD Heading</h3>
     <p>AND THIS IS THE 3RD ONE TO HELP ME GET HOW THE BODY PAGE WORK</p>
 
     <p>AND THIS IS THE LAST PARAGRAPH OF THIS AWESOME PROJECT THAT HELP ME LEARN HTML</p>
