--- a/html advanced/index.html
+++ b/html advanced/index.html
@@ -44,7 +44,8 @@
 <section id="hero-section2">
    
 
-    <body> <div id="person1">
+    <body> 
+    <div id="person1">
  <img src="ALX_HTML.png"alt="Image1 Placeholder">
  <p>Person One</p>
  <h2>This is an H2</h2>
@@ -171,6 +172,7 @@
 <!--End of hero4 section-->
 
 <!--hero5 section-->
+<div id="hero5">
 <div id= "title"><h1>Title</h1></div>
 <section id="hero-section2">
 
@@ -192,6 +194,7 @@
     <p>This is a paragraph</p>
    
    </div>
+
    <div id="person4">
     <img src="ALX_HTML.png"alt="Image1 Placeholder">
     <h1>TITLE Four</h1>
@@ -200,8 +203,12 @@
    </div>
   
 </section>
-<div id="button"><button> Button </button></div>
+<div id="button">
+    <button> Button </button>
+</div>
+</div>
 <!--End of hero 5 section-->
+
 
 <!--Hero 6 section-->
 <div id="title6">TITLE</div>
@@ -245,10 +252,10 @@
         </div>
         <!--End of logo here-->
         <!--Navigation links-->
-        <div id="nav-links">
-<img src="" alt="IMAGE">
-<img src="" alt="IMAGE">
-<img src="" alt="IMAGE">
+        <div id="nav-links2">
+<div><a><img src="" alt="IMAGE"></a></div>
+<div><a><img src="" alt="IMAGE"></a></div>
+<div><a><img src="" alt="IMAGE"></a></div>
         </div>
         <!--End of Navigation links-->
     </div>
