Html Advanced 3rd Commit

--- a/html advanced/index.html
+++ b/html advanced/index.html
@@ -74,9 +74,7 @@
 <!--End of Hero section2-->
 <!--3rd hero section-->
 <section id="hero3">
-   <div id=" hero3-image"> 
     <img src="ALX_HTML.png" alt=" IMAGE">
-   </div>
     <div>
 <q>This is a Quote</q>
 <p>Miyamoto Musashi</p>
@@ -87,8 +85,8 @@
 <!--END of 3rd hero section-->
 
 <!--hero4 section-->
-    <div class ="title4">
-    <h1>MAIN Title</h1>
+<div class ="title4">
+    <h1>MAIN TITLE</h1>
 </div>
 <section id= "hero4">
 
@@ -259,6 +257,10 @@
         </div>
         <!--End of Navigation links-->
     </div>
+    <div id="lastp">
+        <p>This is the last text paragraph</p>
+    </div>
+
 </footer>
 <!--End of footer-->
 </main>
