css basic last commit

--- a/css basic/index.html
+++ b/css basic/index.html
@@ -11,7 +11,7 @@
         <link href="styles.css" rel="stylesheet">
     </head> 
 <body class="works_on_smartphone">
-    <header>
+    <header class=" main-header">
         <ul>
             <li><a href="tweets.html">
                 <h4>🐲CHECKOUT THE LATEST TWEETS🐲</h4>
@@ -20,16 +20,7 @@
     </header>
     <main>
         <article>
-            <style>
-                article
-                {
-                    justify-content: stretch;
-                    margin-left: 10px;
-
-                    border: 1px solid red;
-                    
-                }
-            </style>
+            
 <h1>THIS IS a sample of a Heading 1</h1>
     <p>THIS IS A PARAGRAPH TO SHOW THAT THE BODY PAGE IS OPERATIONAL</p>
 <h2>This is A Heading 2</h2>
